# dashtam-jobs

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  Makefile  README.md  WARP.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release-phase2.yml  release-phase3.yml  test.yml
compose/: docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.test.yml
docker/: Dockerfile
docs/: .pages  index.md
docs/architecture/: .pages  background-jobs.md
docs/guides/: .pages  cross-service-sse-publishing.md
env/: .env.ci.example  .env.dev.example  .env.test.example
src/dashtam_jobs/: __init__.py  broker.py  scheduler.py
src/dashtam_jobs/core/: __init__.py  logging.py  settings.py
src/dashtam_jobs/events/: __init__.py  provider.py  session.py
src/dashtam_jobs/infrastructure/: __init__.py  database.py  sse_publisher.py
src/dashtam_jobs/infrastructure/repositories/: __init__.py  provider_connection.py  session.py
src/dashtam_jobs/middlewares/: __init__.py  logging.py
src/dashtam_jobs/tasks/: __init__.py  sessions.py  tokens.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_broker.py
tests/unit/: __init__.py  test_broker_compliance.py  test_core.py  test_sse_publisher.py  test_tasks_sessions.py  test_tasks_tokens.py
