[project]
name = "dashtam-jobs"
version = "0.2.1"
description = "Centralized background jobs service for Dashtam"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "structlog>=25.5.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.1",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.1",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
precision = 0
skip_covered = false
skip_empty = true
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Type Checking Configuration
# =============================================================================
[tool.mypy]
files = ["src", "tests"]
exclude = [
    "htmlcov/",
    "site/",
    ".venv/",
    "venv/",
]
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "taskiq.*",
    "taskiq_redis.*",
    "sqlalchemy.*",
    "asyncpg.*",
    "structlog.*",
    "uuid_extensions",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = true

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 88
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "htmlcov",
    "site",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["dashtam_jobs"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
]

# =============================================================================
# Build System Configuration
# =============================================================================
[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
